# Native_Android

./: .gitignore  Dockerfile  README.md  run.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: AVDecoder.h  AVDecoderMediaCodec.h  AndroidOut.h  AudioPlayer.h  CMakeLists.txt  GameLogic.h  Model.h  OboePlayer.cpp  OboePlayer.h  Page.h  Renderer.h  Shader.h  SubPage.h  TextureAsset.h  Utility.h  main.cpp
app/src/main/cpp/ffmpeg/arm64-v8a/include/: config.h
app/src/main/cpp/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/armeabi-v7a-neon/include/: config.h
app/src/main/cpp/ffmpeg/armeabi-v7a-neon/lib/pkgconfig/: libavcodec_neon.pc  libavdevice_neon.pc  libavfilter_neon.pc  libavformat_neon.pc  libavutil_neon.pc  libswresample_neon.pc  libswscale_neon.pc
app/src/main/cpp/ffmpeg/armeabi-v7a/include/: config.h
app/src/main/cpp/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/x86/include/: config.h
app/src/main/cpp/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/x86_64/include/: config.h
app/src/main/cpp/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
gradle/: libs.versions.toml
(+9 files in other folders)
